[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls","postgres","macros"] }
tokio = { version = "1", features = ["macros","rt-multi-thread"] }
dotenvy = "0.15"
suspension_core = { path = "../core", package = "core" }
